force-app/main/default/objects/Application__c/fields/strategy_tier__c.field-meta.xml
<CustomField>
    <fullName>strategy_tier__c</fullName>
    <label>Strategy Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>