force-app/main/default/objects/Application__c/fields/Third_Party_Direction__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Direction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Direction</label>
    <type>Checkbox</type>
</CustomField>