force-app/main/default/objects/Application__c/fields/Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest__c</fullName>
    <formula>Total_of_Payment__c  - Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>