force-app/main/default/objects/Application__c/fields/Total_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Payment__c</fullName>
    <label>Total of Payment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>