force-app/main/default/objects/Application__c/fields/TPD_Relationship_To_Applicant__c.field-meta.xml
<CustomField>
    <fullName>TPD_Relationship_To_Applicant__c</fullName>
    <label>TPD Relationship To Applicant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>