force-app/main/default/objects/Application__c/fields/TPD_Who_Will_Direct__c.field-meta.xml
<CustomField>
    <fullName>TPD_Who_Will_Direct__c</fullName>
    <label>TPD Who Will Direct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>