force-app/main/default/objects/Application__c/fields/Unique_ID_AML__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID_AML__c</fullName>
    <description>Unique ID AML</description>
    <inlineHelpText>Unique ID AML</inlineHelpText>
    <label>Unique ID AML</label>
    <length>30</length>
    <type>Text</type>
</CustomField>