force-app/main/default/objects/Application__c/fields/Verification_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Verification_Auth_Token__c</fullName>
    <label>Verification Auth Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>