force-app/main/default/objects/Application__c/fields/Verification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Sent_Date__c</fullName>
    <label>Verification Sent Date</label>
    <type>DateTime</type>
</CustomField>