force-app/main/default/objects/Application__c/fields/Webservice_Request__c.field-meta.xml
<CustomField>
    <fullName>Webservice_Request__c</fullName>
    <label>Webservice Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>