force-app/main/default/objects/Application__c/fields/Webservice_Response__c.field-meta.xml
<CustomField>
    <fullName>Webservice_Response__c</fullName>
    <label>Webservice Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>