force-app/main/default/objects/Application__c/fields/Years_At_Previous_Address__c.field-meta.xml
<CustomField>
    <fullName>Years_At_Previous_Address__c</fullName>
    <label>Years At Previous Address</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>