force-app/main/default/objects/Application__c/validationRules/DisAmt_not_editable_Traditional_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>DisAmt_not_editable_Traditional_Process</fullName>
    <active>false</active>
    <description>Disbursement Amount field is un-editable when the Loan Process Type is Traditional.</description>
    <errorConditionFormula>AND(
ISCHANGED(disbursement__c),
ISPICKVAL(Loan_Process_Type__c, &apos;Traditional&apos;))</errorConditionFormula>
    <errorDisplayField>disbursement__c</errorDisplayField>
    <errorMessage>Disbursement Amount field is not editable when the Loan Process Type is Traditional.</errorMessage>
</ValidationRule>