force-app/main/default/objects/Application__c/validationRules/Disclosure_Statement_Presented_Uneditble.validationRule-meta.xml
<ValidationRule>
    <fullName>Disclosure_Statement_Presented_Uneditble</fullName>
    <active>false</active>
    <description>Disclosure Statement Presented Can&apos;t be changed</description>
    <errorConditionFormula>And(NOT(ISNEW()),ISCHANGED(Disclosure_Statement_Presented__c), Application_Completed_Submitted__c)</errorConditionFormula>
    <errorDisplayField>Disclosure_Statement_Presented__c</errorDisplayField>
    <errorMessage>Once set, Disclosure Statement Presented can&apos;t be changed.</errorMessage>
</ValidationRule>