force-app/main/default/objects/Application__c/listViews/All_Applications_Today.listView-meta.xml
<ListView>
    <fullName>All_Applications_Today</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Decision__c</columns>
    <columns>Application_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Applications Today</label>
</ListView>