force-app/main/default/objects/Application__c/listViews/Applications_Approved.listView-meta.xml
<ListView>
    <fullName>Applications_Approved</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Decision__c</columns>
    <columns>Application_Status__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>System Approved,Analyst Approved,Manually Approved</value>
    </filters>
    <label>Applications-Approved</label>
</ListView>